<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/id_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_id_string"
        android:textColor="@color/darkTextColor"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="@string/character_id_string"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/title_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/item_title_string"
        android:textColor="@color/darkTextColor"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="@string/item_title_string"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/description_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/character_description_string"
        android:textColor="@color/darkTextColor"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="@string/character_description_string"
        android:textSize="14dp" />

    <View
        android:id="@+id/character_info_expand_view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/separator_background_color" />

</LinearLayout>