<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/character_profile_image_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            fresco:backgroundImage="@color/loaded_image_background_color"
            fresco:placeholderImage="@drawable/default_user_avatar"
            fresco:roundAsCircle="true"
            fresco:roundedCornerRadius="4dp" />

        <TextView
            android:id="@+id/character_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/character_profile_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@color/darkTextColor"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="Character name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/character_name_text_view"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp">

            <RelativeLayout
                android:id="@+id/character_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/character_info_logo_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/character_info_logo_icon" />

                <TextView
                    android:id="@+id/character_info_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/character_info_logo_image_view"
                    android:gravity="center"
                    android:text="@string/character_details_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/character_info_expand_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:src="@drawable/comics_expand_arrow_icon" />

            </RelativeLayout>

            <View
                android:id="@+id/character_info_expand_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/character_details_container"
                android:layout_marginTop="10dp"
                android:background="@color/separator_background_color" />

            <LinearLayout
                android:id="@+id/character_details_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/character_info_expand_view"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/character_id_hint_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character_id_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/character_id_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="@string/character_id_string"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/character_description_hint_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/character_description_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/character_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="@string/character_description_string"
                    android:textSize="14dp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/character_comics_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/character_details_linear_layout"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/character_comics_logo_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/character_comics_logo_icon" />

                <TextView
                    android:id="@+id/character_comics_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/character_comics_logo_image_view"
                    android:gravity="center"
                    android:text="@string/character_comics_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/character_comics_expand_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:src="@drawable/comics_expand_arrow_icon" />

            </RelativeLayout>

            <View
                android:id="@+id/character_comics_expand_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/character_comics_container"
                android:layout_marginTop="10dp"
                android:background="@color/separator_background_color" />

            <LinearLayout
                android:id="@+id/character_comics_expand_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/character_comics_expand_view"
                android:layout_marginTop="6dp"
                android:orientation="vertical" />

            <RelativeLayout
                android:id="@+id/character_events_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@+id/character_comics_expand_item_container"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/character_events_logo_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/character_events_logo_icon" />

                <TextView
                    android:id="@+id/character_events_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/character_events_logo_image_view"
                    android:text="@string/character_events_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/character_events_expand_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:src="@drawable/comics_expand_arrow_icon" />

            </RelativeLayout>

            <View
                android:id="@+id/character_events_expand_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/character_events_container"
                android:layout_marginTop="10dp"
                android:background="@color/separator_background_color" />

            <LinearLayout
                android:id="@+id/character_events_expand_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/character_events_expand_view"
                android:layout_marginTop="6dp"
                android:orientation="vertical" />

            <RelativeLayout
                android:id="@+id/character_stories_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@+id/character_events_expand_item_container"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/character_stories_logo_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/character_stories_logo_icon" />

                <TextView
                    android:id="@+id/character_stories_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/character_stories_logo_image_view"
                    android:text="@string/character_stories_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/character_stories_expand_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:src="@drawable/comics_expand_arrow_icon" />

            </RelativeLayout>

            <View
                android:id="@+id/character_stories_expand_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/character_stories_container"
                android:layout_marginTop="10dp"
                android:background="@color/separator_background_color" />

            <LinearLayout
                android:id="@+id/character_stories_expand_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/character_stories_expand_view"
                android:layout_marginTop="6dp"
                android:orientation="vertical" />

            <RelativeLayout
                android:id="@+id/character_series_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@+id/character_stories_expand_item_container"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/character_series_logo_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/character_series_logo_icon" />

                <TextView
                    android:id="@+id/character_series_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/character_series_logo_image_view"
                    android:text="@string/character_series_string"
                    android:textColor="@color/darkTextColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/character_series_expand_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false"
                    android:src="@drawable/comics_expand_arrow_icon" />

            </RelativeLayout>

            <View
                android:id="@+id/character_series_expand_view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/character_series_container"
                android:layout_marginTop="10dp"
                android:background="@color/separator_background_color" />

            <LinearLayout
                android:id="@+id/character_series_expand_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/character_series_expand_view"
                android:layout_marginTop="6dp"
                android:orientation="vertical" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>